--- a/paper/manuscript.tex
+++ b/paper/manuscript.tex
@@ -219,7 +219,7 @@ Three dependent variables were computed for data analysis. Interonset intervals 
 
 Data cleaning, preprocessing and statistical analysis were performed in R version 4.0.5. For statistical analysis, only 16th notes with expressive notations were included. Overall, three trials were excluded from data analysis because participants did not follow the sheet music or stopped performing before the end. Pitch errors were identified by comparing the sequence of musical notes produced by a participant with the sequence of musical notes according to the sheet music. Pitch errors included either extra, missing or substituted tones and were manually removed by using the \emph{editData} R package. For onsets, 11.65\% of the trials contained at least one pitch error (extra notes: 6.28\%, missing notes: 5.07\%, substituted notes: 0.30\%). For offsets, 14.08\% of the trials contained at least one pitch error (extra notes: 6.28\%, missing notes: 5.17\%, substituted notes: 2.63\%). As a result, less than 1 \% of the total responses (i.e., piano keystrokes) were corrected. In addition to pitch errors, we removed outliers for IOIs, KOT and KV, defined as values more than 3 standard deviations from the mean of each dependent variable and excluded from data analysis. For each dependent variable, this resulted in less than 5\% of overall responses being removed as outliers.
 
-We performed separate analyses for the two expressive techniques (i.e., articulation, dynamics). A paired-sample \emph{t}-test or a Wilcoxon signed-rank tests (a non-parametric alternative to a paired \emph{t}-test) was performed to compare the mean IOIs in the teaching and performing condition. For KOT and KV, we performed a 2 x 2 repeated-measures analysis of variance (ANOVA) with the factors Condition (teaching vs.~performing) and Subcomponent (LS; legato vs.~staccato or FP; forte vs.~piano, respectively). The \emph{t.test} function in the \emph{stats} R package was used for a \emph{t}-test. The \emph{aov\_car} function in the \emph{afex} R package was used for a repeated-measures ANOVA. For post-hoc comparisons on the estimated marginal means, we used the \emph{emmeans} R package.
+We performed separate analyses for the two expressive techniques (i.e., articulation, dynamics). A paired-sample \emph{t}-test or a Wilcoxon signed-rank tests (a non-parametric alternative to a paired \emph{t}-test) was performed to compare the mean IOIs in the teaching and performing condition. For KOT and KV, we performed a 2 x 2 repeated-measures analysis of variance (ANOVA) with the factors Condition (teaching vs.~performing) and Subcomponent (LS; legato vs.~staccato or FP; forte vs.~piano, respectively). The \emph{t.test} function in the \emph{stats} R package was used for a \emph{t}-test. For calculating an effect size, we used the \emph{rstatix} R package. The \emph{aov\_car} function in the \emph{afex} R package was used for a repeated-measures ANOVA. For post-hoc comparisons on the estimated marginal means, we used the \emph{emmeans} R package.
 
 \begin{figure}
 \includegraphics[width=1\linewidth]{manuscript_files/figure-latex/stim-1-1} \caption{\label{fig:stimuli}(A)Non-expressive sheet music. (B)Articulation. The curved line (slur) indicates legato and the dots indicate staccato. (C)Dynamics. The symbol `f' denotes forte and the symbol `p' denotes piano. For data analysis, only the 16th notes were included.}\label{fig:stim-1}
@@ -235,7 +235,7 @@ All effects are reported as significant at \emph{p} \textless{} .05. We first re
 \hypertarget{articulation-interonset-intervals-iois}{%
 \subsubsection{2.2.1. Articulation: Interonset Intervals (IOIs)}\label{articulation-interonset-intervals-iois}}
 
-In order to compare the mean IOIs between the teaching and performing condition, we conducted a Wiscoxon Signed-rank test, instead of a paired \emph{t}-test, because a Shapiro-Wilk test showed that the distribution of the mean difference was significantly different from the normal distribution (\emph{p} \textless{} \textless{} 0.001). The Wiscoxon Signed-rank test revealed that participants played more slowly in the teaching condition {[}\emph{Mdn} = 189.55 (ms), \emph{IQR} = 26.74{]} than in the performing condition {[}\emph{Mdn} = 185.24 (ms), \emph{IQR} = 19.32{]} while playing the piece with the notated articulation (\emph{p} = 0.021; \emph{Figure \ref{fig:ioi-1}}).
+In order to compare the mean IOIs between the teaching and performing condition, we conducted a Wiscoxon Signed-rank test, instead of a paired \emph{t}-test, because a Shapiro-Wilk test showed that the distribution of the mean difference was significantly different from the normal distribution (\emph{p} \textless{} \textless{} 0.001). The Wiscoxon Signed-rank test revealed that participants played more slowly in the teaching condition {[}\emph{Mdn} = 189.55 (ms), \emph{IQR} = 26.74{]} than in the performing condition {[}\emph{Mdn} = 185.24 (ms), \emph{IQR} = 19.32{]} while playing the piece with the notated articulation (\emph{p} = 0.021, \emph{r} = 0.41`; \emph{Figure \ref{fig:ioi-1}}).
 
 \hypertarget{articulation-key-overlap-time-kot}{%
 \subsubsection{2.2.2. Articulation: Key-Overlap Time (KOT)}\label{articulation-key-overlap-time-kot}}
@@ -250,7 +250,7 @@ A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~perfo
 \hypertarget{dynamics-interonset-intervals-iois}{%
 \subsubsection{2.2.4. Dynamics: Interonset Intervals (IOIs)}\label{dynamics-interonset-intervals-iois}}
 
-In order to compare the mean IOIs between the teaching and performing condition, we conducted a Wiscoxon Signed-rank test, instead of a paired \emph{t}-test, because a Shapiro-Wilk test showed that the distribution of the mean difference was significantly different from the normal distribution (\emph{p} \textless{} 0.001). The Wiscoxon Signed-rank test revealed no significant difference between the teaching condition {[}\emph{Mdn} = 186.29 (ms), \emph{IQR} = 21.83{]} and the performing condition {[}\emph{Mdn} = 186.27 (ms), \emph{IQR} = 19.58{]} while playing the piece with the notated dynamics (\emph{p} = 0.11; \emph{Figure \ref{fig:ioi-1}}).
+In order to compare the mean IOIs between the teaching and performing condition, we conducted a Wiscoxon Signed-rank test, instead of a paired \emph{t}-test, because a Shapiro-Wilk test showed that the distribution of the mean difference was significantly different from the normal distribution (\emph{p} \textless{} 0.001). The Wiscoxon Signed-rank test revealed no significant difference between the teaching condition {[}\emph{Mdn} = 186.29 (ms), \emph{IQR} = 21.83{]} and the performing condition {[}\emph{Mdn} = 186.27 (ms), \emph{IQR} = 19.58{]} while playing the piece with the notated dynamics (\emph{p} = 0.11, \emph{r} = 0.29; \emph{Figure \ref{fig:ioi-1}}).
 
 \hypertarget{dynamics-key-velocity-kv}{%
 \subsubsection{2.2.5. Dynamics: Key Velocity (KV)}\label{dynamics-key-velocity-kv}}
@@ -299,7 +299,7 @@ In Experiment 1, we employed a simple musical scale in order to maximise experim
 \hypertarget{participants-1}{%
 \subsubsection{3.1.1. Participants}\label{participants-1}}
 
-We recruited 21 piano experts who already had a degree in (above bachelor or equivalent) in piano performance/teaching or were studying advanced piano performance at a music school at the time of recruitment. For data analysis, we excluded one participants due to insufficient motor skills, and one because of large tempo deviations (outside 2 standard deviations from the average tempo across participants). Twenty participants (9 female) were included in the data analysis. Most participants were right-handed (left: 2) with a mean age of 25.90 (\emph{SD} = 4.68). They had 15.65 years of practice on average (\emph{SD} = 5.67).
+We recruited 21 piano experts who already had a degree in (above bachelor or equivalent) in piano performance/teaching or were studying advanced piano performance at a music school at the time of recruitment. For data analysis, we excluded one participants due to insufficient motor skills. Twenty participants (9 female) were included in the data analysis. Most participants were right-handed (left: 2) with a mean age of 25.90 (\emph{SD} = 4.68). They had 15.65 years of practice on average (\emph{SD} = 5.67).
 
 \hypertarget{apparatus-and-stimuli-1}{%
 \subsubsection{3.1.2. Apparatus and stimuli}\label{apparatus-and-stimuli-1}}
@@ -331,7 +331,7 @@ As Experiment 1, we first report results for performance of the piece with the n
 \subsubsection{3.2.1. Articulation: Interonset Intervals (IOIs)}\label{articulation-interonset-intervals-iois-1}}
 
 A paired-sample \emph{t}-test showed that participants played more slowly in the teaching condition {[}\emph{M} = 0.97, \emph{SD} = 0.049{]} than in the performing condition {[}\emph{M} = 0.95, \emph{SD} = 0.040{]} while playing the piece with notated articulation (\emph{t}(19) = 2.47
-, \emph{p} = 0.023; \emph{Figure \ref{fig:ioi-2}}). A Wiscoxon Signed-rank test also confirmed that there was a significant difference between the two condition (\emph{p} = 0.033).
+, \emph{p} = 0.023, Cohen's \emph{d} = -0.55; \emph{Figure \ref{fig:ioi-2}}). A Wiscoxon Signed-rank test also confirmed that there was a significant difference between the two condition (\emph{p} = 0.033, \emph{r} = 0.48).
 
 \hypertarget{articulation-key-overlap-ratio-kor}{%
 \subsubsection{3.2.2. Articulation: Key-Overlap Ratio (KOR)}\label{articulation-key-overlap-ratio-kor}}
@@ -346,7 +346,7 @@ A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~perfo
 \hypertarget{dynamics-interonset-intervals-iois-1}{%
 \subsubsection{3.2.4. Dynamics: Interonset Intervals (IOIs)}\label{dynamics-interonset-intervals-iois-1}}
 
-A paired-sample \emph{t}-test showed no significant difference between the teaching condition {[}\emph{M} = 0.96, \emph{SD} = 0.048{]} and the performing condition {[}\emph{M} = 0.96, \emph{SD} = 0.043{]} while playing the piece with the notated dynamics (\emph{t}(19) = 0.21, \emph{p} = 0.84; \emph{Figure \ref{fig:ioi-2}}). A Wiscoxon Signed-rank test also confirmed that there was no significant difference between the two conditions (\emph{p} = 0.96).
+A paired-sample \emph{t}-test showed no significant difference between the teaching condition {[}\emph{M} = 0.96, \emph{SD} = 0.048{]} and the performing condition {[}\emph{M} = 0.96, \emph{SD} = 0.043{]} while playing the piece with the notated dynamics (\emph{t}(19) = 0.21, \emph{p} = 0.84, Cohen's \emph{d} = -0.05; \emph{Figure \ref{fig:ioi-2}}). A Wiscoxon Signed-rank test also confirmed that there was no significant difference between the two conditions (\emph{p} = 0.96).
 
 \hypertarget{dynamics-key-velocity-kv-1}{%
 \subsubsection{3.2.5. Dynamics: Key Velocity (KV)}\label{dynamics-key-velocity-kv-1}}
