--- a/paper/manuscript.tex
+++ b/paper/manuscript.tex
@@ -112,7 +112,7 @@
   {}{\typeout{Failed to patch title.}}
 \makeatother
 \shorttitle{The Sound of Teaching Music}
-\keywords{teaching, expertise, skill transmission, artistic expression, music\newline\indent Word count: 5022}
+\keywords{teaching, expertise, skill transmission, artistic expression, music\newline\indent Word count: around 5500 (except references)}
 \usepackage{csquotes}
 \ifXeTeX
   % Load polyglossia as late as possible: uses bidi with RTL langages (e.g. Hebrew, Arabic)
@@ -173,7 +173,7 @@ Experts modulate their performance of actions for teaching purposes, performing 
 \hypertarget{introduction}{%
 \section{1. Introduction}\label{introduction}}
 
-Deliberate teaching has supported human skill transmission over generations and provides a key route for learning Tomasello (2016). Experts modulate their behaviour so that novices can extract relevant information to learn a novel skill. In particular, adults modulate their speech (motherese) and actions (motionese) when demonstrating a skill to infant learners Saint-Georges et al. (2013). These modulations include slowing down and exaggerating sounds and actions. Similar findings were obtained in studies with adult learners, where exaggerations were observed when native British English speakers were talking to first language English learners (Uther, Knoll, \& Burnham, 2007) and when skilled adults were teaching xylophone melodies to novices (McEllin, Knoblich, \& Sebanz, 2017). The observed modulations are thought to provide communicative signals that can facilitate learning by affecting attention and memory (Csibra \& Gergely, 2009).
+Deliberate teaching has supported human skill transmission over generations and provides a key route for learning (Thornton \& Raihani, 2008; Tomasello, 2016). Experts modulate their behaviour so that novices can extract relevant information to learn a novel skill. In particular, adults modulate their speech (motherese) and actions (motionese) when demonstrating a skill to infant learners (Brand, Baldwin, \& Ashburn, 2002; Saint-Georges et al., 2013). These modulations include slowing down and exaggerating sounds and actions. Similar findings were obtained in studies with adult learners, where exaggerations were observed when native British English speakers were talking to first language English learners (Uther, Knoll, \& Burnham, 2007) and when skilled adults were teaching xylophone melodies to novices (McEllin, Knoblich, \& Sebanz, 2017). The observed modulations are thought to provide communicative signals that can facilitate learning by affecting attention and memory (Csibra \& Gergely, 2009).
 
 Previous research has shown that demonstrators not only adjust their gestures (Campisi \& Özyürek, 2013) and actions (Fukuyama et al., 2015) to learners' skills but engage in specific action modulations to highlight particular aspects of demonstrated actions. For example, Schaik, Meyer, Ham, and Hunnius (2019) showed that adults used specific action modulations for demonstrating different action effects of objects to infants. Ho, Littman, MacGlashan, Cushman, and Austerweil (2016) found that demonstrators chose costly movement paths at structurally important points to disambiguate one goal over other possibilities.
 
@@ -201,7 +201,7 @@ We recruited 36 piano experts who played the piano for at least the past 10 year
 
 A weighted Yamaha MIDI digital piano was used to record participants' performance via Max/MSP (\url{https://cycling74.com/products/max}) on a MacBook Pro with Mac OS X Mojave 10.14.3. The laptop and piano were connected to a high-fidelity soundcard (Focusrite Scarlett 6i6) to deliver a metronome and piano sound. All auditory feedback was given to participants through headphones (Audio-Technica ATH-M50X). Sheet music was displayed on a computer monitor in front of the participants. The pitch, onset and offset time of each note, and key velocity profiles were obtained from MIDI data using Max/MSP patchers.
 
-One musical excerpt was used as a stimulus. The excerpt was taken from ``A Dozen a Day - Play with Ease in Many Keys" by Edna-Mae Burnam and modified for the experiment. It consisted of a 6-measure isochronous melody noted in 4/4 meter. The stimulus was composed in C major to be played with the right hand only. Non-expressive sheet music (i.e., sheet music without expressive notations: see \emph{Figure \ref{fig:stimuli}, A}) was used for the purpose of practice. Expressive notations were added to the non-expressive sheet music for the experiment. They referred to either articulation or dynamics (\emph{Figure \ref{fig:stimuli}, B-C}). Articulation was notated as either legato or staccato. Legato indicates that musical notes are to be connected and should sound smooth. Staccato requires producing musical notes with shortened duration, keeping them separate from each other. Dynamics was notated as either forte and piano. Forte indicates that musical notes should be played loudly whereas piano indicates that musical notes should be played softly. The notation did not include any indication of fingering (i.e., the positioning of the fingers when playing the piano) because the piece was simple and pilot testing had shown that specifying fingering was not necessary.
+One musical excerpt was used as a stimulus. The excerpt was taken from ``A Dozen a Day - Play with Ease in Many Keys" by Edna-Mae Burnam and modified for the experiment. It consisted of a 6-measure isochronous melody noted in 4/4 meter. The stimulus was composed in C major to be played with the right hand only. Non-expressive sheet music (i.e., sheet music without expressive notations, see \emph{Figure \ref{fig:stimuli}, A}) was used for the purpose of practice. Expressive notations were added to the non-expressive sheet music for the experiment. They referred to either articulation or dynamics (\emph{Figure \ref{fig:stimuli}, B-C}). Articulation was notated as either legato or staccato. Legato indicates that musical notes are to be connected and should sound smooth. Staccato requires producing musical notes with shortened duration, keeping them separate from each other. Dynamics was notated as either forte and piano. Forte indicates that musical notes should be played loudly whereas piano indicates that musical notes should be played softly. The notation did not include any indication of fingering (i.e., the positioning of the fingers when playing the piano) because the piece was simple and pilot testing had shown that specifying fingering was not necessary.
 
 \hypertarget{procedure}{%
 \subsubsection{2.1.3. Procedure}\label{procedure}}
@@ -217,7 +217,7 @@ At the end of the experiment, participants filled in a questionnaire asking abou
 
 Three dependent variables were computed for data analysis. Interonset intervals (IOIs) are the intervals between onsets of adjacent notes and provide a measure of tempo. Key-overlap time (KOT) is the difference between the offset time of the current tone (i.e., key release time) and the onset time of the ensuing tone, and measures the smoothness of musical sequences (Bresin \& Battel, 2000). A positive value indicates smooth legato styles due to overlap between the current and ensuing tone whereas a negative value indicates sharp staccato styles due to separation between the current and ensuing tone. Tone intensity is assessed by key velocity (KV) and measures the loudness of a musical note. The value of KV in MIDI varies between 0 (minimum) and 127 (maximum).
 
-Data cleaning, preprocessing and statistical analysis were performed in R version 4.0.5. For statistical analysis, only 16th notes with expressive notations were included. Overall, three trials were excluded from data analysis because participants did not follow the sheet music or stopped performing before the end. Pitch errors were identified by comparing the sequence of musical notes produced by a participant with the sequence of musical notes according to the sheet music. Pitch errors included either extra, missing or substituted tones and were manually removed by using the \emph{editData} R package. For onsets, 11.65\% of the trials contained at least one pitch error (extra notes: 6.28\%, missing notes: 5.07\%, substituted notes: 0.30\%). For offsets, 14.08\% of the trials contained at least one pitch error (extra notes: 6.28\%, missing notes: 5.17\%, substituted notes: 2.63\%). As a result, less than 1 \% of the total responses were corrected. In addition to pitch errors, we removed outliers for IOIs, KOT and KV, defined as values more than 3 standard deviations from the mean of each dependent variable and excluded from data analysis. For each dependent variable, this resulted in less than 5\% of overall responses being removed as outliers.
+Data cleaning, preprocessing and statistical analysis were performed in R version 4.0.5. For statistical analysis, only 16th notes with expressive notations were included. Overall, five trials were excluded from data analysis because participants did not follow the sheet music or stopped performing before the end. Pitch errors were identified by comparing the sequence of musical notes produced by a participant with the sequence of musical notes according to the sheet music. Pitch errors included either extra, missing or substituted tones and were manually removed by using the \emph{editData} R package. For onsets, 11.65\% of the trials contained at least one pitch error (extra notes: 6.28\%, missing notes: 5.07\%, substituted notes: 0.30\%). For offsets, 14.08\% of the trials contained at least one pitch error (extra notes: 6.28\%, missing notes: 5.17\%, substituted notes: 2.63\%). As a result, less than 1 \% of the total responses were corrected. In addition to pitch errors, we removed outliers for IOIs, KOT and KV, defined as values more than 3 standard deviations from the mean of each dependent variable and excluded from data analysis. For each dependent variable, this resulted in less than 5\% of overall responses being removed as outliers.
 
 We performed separate analyses for the two expressive techniques (i.e., articulation, dynamics). A paired-sample \emph{t}-test or a Wilcoxon Signed-rank test (a non-parametric alternative to a paired \emph{t}-test) was performed to compare the mean IOIs in the teaching and performing condition. For KOT and KV, we performed a 2 x 2 repeated-measures analysis of variance (ANOVA) with the factors Condition (teaching vs.~performing) and Subcomponent (LS: legato vs.~staccato or FP: forte vs.~piano, respectively). The \emph{t.test} or \emph{wilcox.test} function in the \emph{stats} R package was used for a \emph{t}-test or a Wilcoxon Signed-rank test. For calculating an effect size, we used the \emph{rstatix} R package. The \emph{aov\_car} function in the \emph{afex} R package was used for a repeated-measures ANOVA. For post-hoc comparisons on the estimated marginal means, we used the \emph{emmeans} R package.
 
@@ -235,44 +235,44 @@ All effects are reported as significant at \emph{p} \textless{} .05. We first re
 \hypertarget{articulation-interonset-intervals-iois}{%
 \subsubsection{2.2.1. Articulation: Interonset Intervals (IOIs)}\label{articulation-interonset-intervals-iois}}
 
-In order to compare the mean IOIs between the teaching and performing condition, we conducted a Wiscoxon Signed-rank test, instead of a paired \emph{t}-test, because a Shapiro-Wilk test showed that the distribution of the mean difference was significantly different from the normal distribution (\emph{p} \textless{} 0.001). The Wiscoxon Signed-rank test revealed that participants played more slowly in the teaching condition {[}\emph{Mdn} = 189.55 (ms), \emph{IQR} = 26.74{]} than in the performing condition {[}\emph{Mdn} = 185.24 (ms), \emph{IQR} = 19.32{]} while playing the piece with the notated articulation (\emph{p} = 0.021, \emph{r} = 0.41: \emph{Figure \ref{fig:ioi-1}}).
+In order to compare the mean IOIs between the teaching and performing condition, we conducted a Wiscoxon Signed-rank test, instead of a paired \emph{t}-test, because a Shapiro-Wilk test showed that the distribution of the mean difference was significantly different from the normal distribution (\emph{p} \textless{} 0.001). The Wiscoxon Signed-rank test revealed that participants played more slowly in the teaching condition {[}\emph{Mdn} = 189.55 (ms), \emph{IQR} = 26.74{]} than in the performing condition {[}\emph{Mdn} = 185.24 (ms), \emph{IQR} = 19.32{]} while playing the piece with the notated articulation (\emph{p} = 0.021, \emph{r} = 0.41, \emph{Figure \ref{fig:ioi-1}}).
 
 \hypertarget{articulation-key-overlap-time-kot}{%
 \subsubsection{2.2.2. Articulation: Key-Overlap Time (KOT)}\label{articulation-key-overlap-time-kot}}
 
-A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-LS (legato vs.~staccato) revealed that there was a significant main effect of Subcomponent-LS (\emph{F}(1,30) = 1158, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.94) and a significant interaction between Condition and Subcomponent-LS (\emph{F}(1,30) = 8.31, \emph{p} = 0.007, \(\eta_G^2\) = 0.011: \emph{Figure \ref{fig:kot-1}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment showed that participants produced shorter staccato in the teaching condition {[}\emph{M} = -134.03 (ms), \emph{SD} = 19.86{]} than in the performing condition {[}\emph{M} = -128.35 (ms), \emph{SD} = 20.80{]} (\emph{p} = 0.004) while there was no significant difference in legato between the teaching {[}\emph{M} = 15.91 (ms), \emph{SD} = 15.49{]} and performing condition {[}\emph{M} = 14.00 (ms), \emph{SD} = 17.01{]} (\emph{p} = 0.32).
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-LS (legato vs.~staccato) revealed that there was a significant main effect of Subcomponent-LS (\emph{F}(1,30) = 1158, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.94) and a significant interaction between Condition and Subcomponent-LS (\emph{F}(1,30) = 8.31, \emph{p} = 0.007, \(\eta_G^2\) = 0.011, \emph{Figure \ref{fig:kot-1}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment showed that participants produced shorter staccato in the teaching condition {[}\emph{M} = -134.03 (ms), \emph{SD} = 19.86{]} than in the performing condition {[}\emph{M} = -128.35 (ms), \emph{SD} = 20.80{]} (\emph{p} = 0.004) while there was no significant difference in legato between the teaching {[}\emph{M} = 15.91 (ms), \emph{SD} = 15.49{]} and performing condition {[}\emph{M} = 14.00 (ms), \emph{SD} = 17.01{]} (\emph{p} = 0.32).
 
 \hypertarget{articulation-key-velocity-kv}{%
 \subsubsection{2.2.3. Articulation: Key Velocity (KV)}\label{articulation-key-velocity-kv}}
 
-A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-LS (legato vs.~staccato) showed that there was a significant interaction between Condition and Subcomponent-LS (\emph{F}(1,30) = 7.38, \emph{p} = 0.011, \(\eta_G^2\) = 0.004: \emph{Figure \ref{fig:vel-1}}). However, post-hoc comparisons based on the estimated marginal means with Tukey adjustment did not find a significant difference between the teaching {[}Legato: \emph{M} = 70.34, \emph{SD} = 6.45, Staccato: \emph{M} = 72.01, \emph{SD} = 8.74{]} and performing condition {[}Legato: \emph{M} = 70.68, \emph{SD} = 5.84, Staccato: \emph{M} = 70.42, \emph{SD} = 7.96{]} for each subcomponent (Legato: \emph{p} = 0.70, Staccato: \emph{p} = 0.07).
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-LS (legato vs.~staccato) showed that there was a significant interaction between Condition and Subcomponent-LS (\emph{F}(1,30) = 7.38, \emph{p} = 0.011, \(\eta_G^2\) = 0.004, \emph{Figure \ref{fig:vel-1}}). However, post-hoc comparisons based on the estimated marginal means with Tukey adjustment did not find a significant difference between the teaching {[}Legato: \emph{M} = 70.34, \emph{SD} = 6.45; Staccato: \emph{M} = 72.01, \emph{SD} = 8.74{]} and performing condition {[}Legato: \emph{M} = 70.68, \emph{SD} = 5.84, Staccato: \emph{M} = 70.42, \emph{SD} = 7.96{]} for each subcomponent (Legato: \emph{p} = 0.70, Staccato: \emph{p} = 0.07).
 
 \hypertarget{dynamics-interonset-intervals-iois}{%
 \subsubsection{2.2.4. Dynamics: Interonset Intervals (IOIs)}\label{dynamics-interonset-intervals-iois}}
 
-In order to compare the mean IOIs between the teaching and performing condition, we conducted a Wiscoxon Signed-rank test, instead of a paired \emph{t}-test, because a Shapiro-Wilk test showed that the distribution of the mean difference was significantly different from the normal distribution (\emph{p} \textless{} 0.001). The Wiscoxon Signed-rank test revealed no significant difference between the teaching condition {[}\emph{Mdn} = 186.29 (ms), \emph{IQR} = 21.83{]} and the performing condition {[}\emph{Mdn} = 186.27 (ms), \emph{IQR} = 19.58{]} while playing the piece with the notated dynamics (\emph{p} = 0.11, \emph{r} = 0.29: \emph{Figure \ref{fig:ioi-1}}).
+In order to compare the mean IOIs between the teaching and performing condition, we conducted a Wiscoxon Signed-rank test, instead of a paired \emph{t}-test, because a Shapiro-Wilk test showed that the distribution of the mean difference was significantly different from the normal distribution (\emph{p} \textless{} 0.001). The Wiscoxon Signed-rank test revealed no significant difference between the teaching condition {[}\emph{Mdn} = 186.29 (ms), \emph{IQR} = 21.83{]} and the performing condition {[}\emph{Mdn} = 186.27 (ms), \emph{IQR} = 19.58{]} while playing the piece with the notated dynamics (\emph{p} = 0.11, \emph{r} = 0.29, \emph{Figure \ref{fig:ioi-1}}).
 
 \hypertarget{dynamics-key-velocity-kv}{%
 \subsubsection{2.2.5. Dynamics: Key Velocity (KV)}\label{dynamics-key-velocity-kv}}
 
-A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (forte vs.~piano) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,30) = 370, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.74) and a significant interaction between Condition and Subcomponent-FP (\emph{F}(1,30) = 6.80, \emph{p} = 0.014, \(\eta_G^2\) = 0.003: \emph{Figure \ref{fig:vel-1}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment revealed that participants produced louder forte in the teaching condition {[}\emph{M} = 82.78, \emph{SD} = 8.30{]} than in the performing condition {[}\emph{M} = 81.66, \emph{SD} = 7.43{]} (\emph{p} = 0.021) while there was no significant difference in piano between the teaching {[}\emph{M} = 60.63, \emph{SD} = 5.07{]} and performing condition {[}\emph{M} = 60.99, \emph{SD} = 4.40{]} (\emph{p} = 0.45).
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (forte vs.~piano) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,30) = 370, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.74) and a significant interaction between Condition and Subcomponent-FP (\emph{F}(1,30) = 6.80, \emph{p} = 0.014, \(\eta_G^2\) = 0.003, \emph{Figure \ref{fig:vel-1}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment revealed that participants produced louder forte in the teaching condition {[}\emph{M} = 82.78, \emph{SD} = 8.30{]} than in the performing condition {[}\emph{M} = 81.66, \emph{SD} = 7.43{]} (\emph{p} = 0.021) while there was no significant difference in piano between the teaching {[}\emph{M} = 60.63, \emph{SD} = 5.07{]} and performing condition {[}\emph{M} = 60.99, \emph{SD} = 4.40{]} (\emph{p} = 0.45).
 
 \hypertarget{dynamics-kv-transition-points}{%
 \subsubsection{2.2.6. Dynamics: KV Transition Points}\label{dynamics-kv-transition-points}}
 
-Additionally, we conducted an exploratory analysis by focusing on specific points at which each subcomponent changed from one to the other (i.e., forte to piano: FtoP, piano to forte: PtoF). These points could be structurally important in order to make a contrast between forte and piano. We calculated the KV difference for each interval by subtracting the KV value of the current note from that of the following note. Outliers were removed using the same criteria as for the other dependent variables and less than 5 \% of the data were excluded from data analysis. A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (FtoP vs.~PtoF) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,30) = 224, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.83) and a significant interaction of Condition and Subcomponent-FP (\emph{F}(1,30) = 25.74, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.032: \emph{Figure \ref{fig:vel-diff}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment showed that there was a larger KV difference when the expressive notation changed from forte to piano (FtoP: \emph{p} = 0.002) and from piano to forte (PtoF: \emph{p} \textless{} 0.001) in the teaching condition {[}FtoP: \emph{M} = -14.06, \emph{SD} = 7.20, PtoF: \emph{M} = 24.26, \emph{SD} = 9.75{]} than in the performing condition {[}FtoP: \emph{M} = -11.69, \emph{SD} = 5.97, PtoF: \emph{M} = 20.88, \emph{SD} = 8.67{]}.
+Additionally, we conducted an exploratory analysis by focusing on specific points at which each subcomponent changed from one to the other (i.e., forte to piano: FtoP, piano to forte: PtoF). These points could be structurally important in order to make a contrast between forte and piano. We calculated the KV difference for each interval by subtracting the KV value of the current note from that of the following note. Outliers were removed using the same criteria as for the other dependent variables and less than 5 \% of the data were excluded from analysis. A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (FtoP vs.~PtoF) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,30) = 224, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.83) and a significant interaction of Condition and Subcomponent-FP (\emph{F}(1,30) = 25.74, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.032, \emph{Figure \ref{fig:vel-diff}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment showed that there was a larger KV difference when the expressive notation changed from forte to piano (FtoP: \emph{p} = 0.002) and from piano to forte (PtoF: \emph{p} \textless{} 0.001) in the teaching condition {[}FtoP: \emph{M} = -14.06, \emph{SD} = 7.20; PtoF: \emph{M} = 24.26, \emph{SD} = 9.75{]} than in the performing condition {[}FtoP: \emph{M} = -11.69, \emph{SD} = 5.97, PtoF: \emph{M} = 20.88, \emph{SD} = 8.67{]}.
 
 \hypertarget{dynamics-key-overlap-time-kot}{%
 \subsubsection{2.2.7. Dynamics: Key-Overlap Time (KOT)}\label{dynamics-key-overlap-time-kot}}
 
-A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (forte vs.~piano) revealed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,30) = 377, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.31: \emph{Figure \ref{fig:kot-1}}), reflecting more key overlap for forte notes compared to piano notes. Neither the main effect of Condition (\emph{F}(1,30) = 0.42, \emph{p} = 0.52, \(\eta_G^2\) = 0.000) nor the interaction between Condition and Subcomponent-FP (\emph{F}(1,30) = 0.00, \emph{p} = 0.99, \(\eta_G^2\) = 0.000) was significant.
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (forte vs.~piano) revealed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,30) = 377, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.31, \emph{Figure \ref{fig:kot-1}}), reflecting more key overlap for forte notes compared to piano notes. Neither the main effect of Condition (\emph{F}(1,30) = 0.42, \emph{p} = 0.52, \(\eta_G^2\) = 0.000) nor the interaction between Condition and Subcomponent-FP (\emph{F}(1,30) = 0.000, \emph{p} = 0.99, \(\eta_G^2\) = 0.000) was significant.
 
 \hypertarget{discussion}{%
 \subsection{2.3. Discussion}\label{discussion}}
 
-The findings from Experiment 1 indicated that skilled pianists modified their performance for teaching purposes. For IOIs, we found a small but significant slowing down during teaching specifically when playing the piece with the notated articulation. This finding is in line with earlier studies that found slower performance of actions in a teaching context McEllin et al. (2017). However, we did not find a significant difference in tempo when participants were teaching dynamics. It could be that trying to keep the prescribed tempo (conveyed through the leading metronome) limited the extent to which participants slowed down their performance during teaching. Another possibility is that slower performance may be beneficial to highlight the relation between two notes (i.e., to what extent two notes overlap) and was therefore employed when teaching articulation, whereas slower performance might not help when teaching dynamics.
+The findings from Experiment 1 indicated that skilled pianists modified their performance for teaching purposes. For IOIs, we found a small but significant slowing down during teaching specifically when playing the piece with the notated articulation. This finding is in line with earlier studies that found slower performance of actions in a teaching context (e.g., Brand et al., 2002; McEllin et al., 2017). However, we did not find a significant difference in tempo when participants were teaching dynamics. It could be that trying to keep the prescribed tempo (conveyed through the leading metronome) limited the extent to which participants slowed down their performance during teaching. Another possibility is that slower performance may be beneficial to highlight the relation between two notes (i.e., to what extent two notes overlap) and was therefore employed when teaching articulation, whereas slower performance might not help when teaching dynamics.
 
-The results for KOT and KV showed that participants successfully highlighted the relevant aspects of articulation and dynamics. Specifically, they produced shorter staccato when teaching articulation and produced louder forte when teaching dynamics. Moreover, our exploratory analysis demonstrated that participants made a larger contrast in dynamics at transition points where one of two subcomponents moved to the other (i.e., forte to piano or piano to forte). Importantly, participants did not modulate their performance in terms of irrelevant aspects of the techniques for teaching purposes (e.g., modulating the smoothness of sound while teaching dynamics). These findings confirmed that participants modulated their performance in systematic and fine-grained ways in order to teach expressive techniques.
+The results for KOT and KV showed that participants successfully highlighted relevant aspects of articulation and dynamics. Specifically, they produced shorter staccato when teaching articulation and produced louder forte when teaching dynamics. Moreover, our exploratory analysis demonstrated that participants made a larger contrast in dynamics at transition points (i.e., forte to piano or piano to forte). Importantly, participants did not modulate their performance in terms of irrelevant aspects of the techniques for teaching purposes (e.g., modulating the smoothness of sound while teaching dynamics). These findings confirmed that participants modulated their performance in systematic and fine-grained ways in order to teach expressive techniques.
 
 In Experiment 1, we employed a simple musical scale in order to maximise experimental control. To test whether our results generalise to a more naturalistic piece, in Experiment 2, we chose an actual piano piece and modified it for the purpose of the experiment. If pianists selectively highlight the relevant aspects of the techniques to be taught also in a more naturalistic piece containing more opportunities for expression, they should again produce longer legato and shorter staccato while teaching articulation. When teaching dynamics, they should produce louder forte and softer piano. Given the findings we observed in Experiment 1, we also predicted that participants would make a larger contrast between forte and piano at transition points, and that they might play more slowly when teaching, especially when teaching articulation.
 
@@ -331,45 +331,37 @@ As Experiment 1, we first report results for performance of the piece with the n
 \subsubsection{3.2.1. Articulation: Interonset Intervals (IOIs)}\label{articulation-interonset-intervals-iois-1}}
 
 A paired-sample \emph{t}-test showed that participants played more slowly in the teaching condition {[}\emph{M} = 0.97, \emph{SD} = 0.049{]} than in the performing condition {[}\emph{M} = 0.95, \emph{SD} = 0.040{]} while playing the piece with the notated articulation (\emph{t}(19) = 2.47
-, \emph{p} = 0.023, Cohen's \emph{d} = 0.55: \emph{Figure \ref{fig:ioi-2}}). A Wiscoxon Signed-rank test also confirmed that there was a significant difference between the two conditions (\emph{p} = 0.033, \emph{r} = 0.48).
+, \emph{p} = 0.023, Cohen's \emph{d} = 0.55, \emph{Figure \ref{fig:ioi-2}}). A Wiscoxon Signed-rank test also confirmed that there was a significant difference between the two conditions (\emph{p} = 0.033, \emph{r} = 0.48).
 
 \hypertarget{articulation-key-overlap-ratio-kor}{%
 \subsubsection{3.2.2. Articulation: Key-Overlap Ratio (KOR)}\label{articulation-key-overlap-ratio-kor}}
 
-A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-LS (legato vs.~staccato) showed that there was a significant main effect of Subcomponent-LS (\emph{F}(1,19) = 2573, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.98) and a significant interaction between Condition and Subcomponent-LS (\emph{F}(1,19) = 8.91, \emph{p} = 0.008, \(\eta_G^2\) = 0.01: \emph{Figure \ref{fig:kor-2}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment showed that participants produced shorter staccato in the teaching condition {[}\emph{M} = -0.76, \emph{SD} = 0.06{]} than in the performing condition {[}\emph{M} = -0.74, \emph{SD} = 0.04{]} (\emph{p} = 0.002) while there was no significant difference in legato between the teaching {[}\emph{M} = 0.12, \emph{SD} = 0.07{]} and performing condition {[}\emph{M} = 0.12, \emph{SD} = 0.07{]} (\emph{p} = 0.56).
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-LS (legato vs.~staccato) showed that there was a significant main effect of Subcomponent-LS (\emph{F}(1,19) = 2573, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.98) and a significant interaction between Condition and Subcomponent-LS (\emph{F}(1,19) = 8.91, \emph{p} = 0.008, \(\eta_G^2\) = 0.01, \emph{Figure \ref{fig:kor-2}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment showed that participants produced shorter staccato in the teaching condition {[}\emph{M} = -0.76, \emph{SD} = 0.06{]} than in the performing condition {[}\emph{M} = -0.74, \emph{SD} = 0.04{]} (\emph{p} = 0.002) while there was no significant difference in legato between the teaching {[}\emph{M} = 0.12, \emph{SD} = 0.07{]} and performing condition {[}\emph{M} = 0.12, \emph{SD} = 0.07{]} (\emph{p} = 0.56).
 
 \hypertarget{articulation-key-velocity-kv-1}{%
 \subsubsection{3.2.3. Articulation: Key Velocity (KV)}\label{articulation-key-velocity-kv-1}}
 
-A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-LS (legato vs.~staccato) showed that there was a significant main effect of Subcomponent-LS (\emph{F}(1,19) = 7.91, \emph{p} = 0.011, \(\eta_G^2\) = 0.03: \emph{Figure \ref{fig:vel-2}}), reflecting louder sound for legato notes compared to staccato notes. Neither the main effect of Condition (\emph{F}(1,19) = 1.33, \emph{p} = 0.26, \(\eta_G^2\) = 0.003) nor the interaction between Condition and Subcomponent-LS (\emph{F}(1,19) = 7.91, \emph{p} = 0.71, \(\eta_G^2\) = 0.000) was significant.
-
-\begin{verbatim}
-## Warning: Computation failed in `stat_compare_means()`:
-## 'symbols' must be unique, but are = **|**|*|ns
-
-## Warning: Computation failed in `stat_compare_means()`:
-## 'symbols' must be unique, but are = **|**|*|ns
-\end{verbatim}
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-LS (legato vs.~staccato) showed that there was a significant main effect of Subcomponent-LS (\emph{F}(1,19) = 7.91, \emph{p} = 0.011, \(\eta_G^2\) = 0.03, \emph{Figure \ref{fig:vel-2}}), reflecting louder sound for legato notes compared to staccato notes. Neither the main effect of Condition (\emph{F}(1,19) = 1.33, \emph{p} = 0.26, \(\eta_G^2\) = 0.003) nor the interaction between Condition and Subcomponent-LS (\emph{F}(1,19) = 0.14, \emph{p} = 0.71, \(\eta_G^2\) = 0.000) was significant.
 
 \hypertarget{dynamics-interonset-intervals-iois-1}{%
 \subsubsection{3.2.4. Dynamics: Interonset Intervals (IOIs)}\label{dynamics-interonset-intervals-iois-1}}
 
-A paired-sample \emph{t}-test showed no significant difference between the teaching condition {[}\emph{M} = 0.96, \emph{SD} = 0.048{]} and the performing condition {[}\emph{M} = 0.96, \emph{SD} = 0.043{]} while playing the piece with the notated dynamics (\emph{t}(19) = 0.21, \emph{p} = 0.84, Cohen's \emph{d} = 0.05: \emph{Figure \ref{fig:ioi-2}}). A Wiscoxon Signed-rank test also confirmed that there was no significant difference between the two conditions (\emph{p} = 0.96).
+A paired-sample \emph{t}-test showed no significant difference between the teaching condition {[}\emph{M} = 0.96, \emph{SD} = 0.048{]} and the performing condition {[}\emph{M} = 0.96, \emph{SD} = 0.043{]} while playing the piece with the notated dynamics (\emph{t}(19) = 0.21, \emph{p} = 0.84, Cohen's \emph{d} = 0.05, \emph{Figure \ref{fig:ioi-2}}). A Wiscoxon Signed-rank test also confirmed that there was no significant difference between the two conditions (\emph{p} = 0.96).
 
 \hypertarget{dynamics-key-velocity-kv-1}{%
 \subsubsection{3.2.5. Dynamics: Key Velocity (KV)}\label{dynamics-key-velocity-kv-1}}
 
-A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (forte vs.~piano) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,19) = 132, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.72) and a significant interaction between Condition and Subcomponent-FP (\emph{F}(1,19) = 6.12, \emph{p} = 0.023, \(\eta_G^2\) = 0.018: \emph{Figure \ref{fig:vel-2}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment revealed that participants produced louder forte (\emph{p} = 0.040) and softer piano (\emph{p} = 0.024) in the teaching condition {[}Forte: \emph{M} = 83.20, \emph{SD} = 8.84, Piano: \emph{M} = 60.53, \emph{SD} = 3.76{]} than in the performing condition {[}Forte: \emph{M} = 81.49, \emph{SD} = 8.12, Piano: \emph{M} = 62.42, \emph{SD} = 4.82{]} than in the performing condition.
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (forte vs.~piano) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,19) = 132, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.72) and a significant interaction between Condition and Subcomponent-FP (\emph{F}(1,19) = 6.12, \emph{p} = 0.023, \(\eta_G^2\) = 0.018, \emph{Figure \ref{fig:vel-2}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment revealed that participants produced louder forte (\emph{p} = 0.040) and softer piano (\emph{p} = 0.024) in the teaching condition {[}Forte: \emph{M} = 83.20, \emph{SD} = 8.84, Piano: \emph{M} = 60.53, \emph{SD} = 3.76{]} than in the performing condition {[}Forte: \emph{M} = 81.49, \emph{SD} = 8.12, Piano: \emph{M} = 62.42, \emph{SD} = 4.82{]} than in the performing condition.
 
 \hypertarget{dynamics-kv-transition-points-1}{%
 \subsubsection{3.2.6. Dynamics: KV Transition Points}\label{dynamics-kv-transition-points-1}}
 
-A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (FtoP vs.~PtoF) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,19) = 124, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.82) and a significant interaction of Condition and Subcomponent-FP (\emph{F}(1,19) = 9.15, \emph{p} = 0.007, \(\eta_G^2\) = 0.059: \emph{Figure \ref{fig:vel-diff}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment showed that there was a larger KV difference when the expressive notation changed from forte to piano (FtoP: \emph{p} = 0.029) and from piano to forte (PtoF: \emph{p} = 0.002) in the teaching condition {[}FtoP: \emph{M} = -17.23, \emph{SD} = 8.26, PtoF: \emph{M} = 20.71, \emph{SD} = 8.87{]} than in the performing condition {[}FtoP: \emph{M} = -14.04, \emph{SD} = 7.67, PtoF: \emph{M} = 16.05, \emph{SD} = 7.32{]}.
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (FtoP vs.~PtoF) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,19) = 124, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.82) and a significant interaction of Condition and Subcomponent-FP (\emph{F}(1,19) = 9.15, \emph{p} = 0.007, \(\eta_G^2\) = 0.059, \emph{Figure \ref{fig:vel-diff}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment showed that there was a larger KV difference when the expressive notation changed from forte to piano (FtoP: \emph{p} = 0.029) and from piano to forte (PtoF: \emph{p} = 0.002) in the teaching condition {[}FtoP: \emph{M} = -17.23, \emph{SD} = 8.26, PtoF: \emph{M} = 20.71, \emph{SD} = 8.87{]} than in the performing condition {[}FtoP: \emph{M} = -14.04, \emph{SD} = 7.67, PtoF: \emph{M} = 16.05, \emph{SD} = 7.32{]}.
 
 \hypertarget{dynamics-key-overlap-ratio-kor}{%
 \subsubsection{3.2.7. Dynamics: Key-Overlap Ratio (KOR)}\label{dynamics-key-overlap-ratio-kor}}
 
-A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (forte vs.~piano) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,19) = 630, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.94), reflecting more key overlap for forte notes compared to piano notes. Neither the main effect of Condition (\emph{F}(1,19) = 0.081, \emph{p} = 0.78, \(\eta_G^2\) = 0.000) nor the interaction between Condition and Subcomponent-FP (\emph{F}(1,19) = 0.35, \emph{p} = 0.56, \(\eta_G^2\) = 0.001: \emph{Figure \ref{fig:kor-2}}) was significant.
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (forte vs.~piano) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,19) = 630, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.94), reflecting more key overlap for forte notes compared to piano notes. Neither the main effect of Condition (\emph{F}(1,19) = 0.081, \emph{p} = 0.78, \(\eta_G^2\) = 0.000) nor the interaction between Condition and Subcomponent-FP (\emph{F}(1,19) = 0.35, \emph{p} = 0.56, \(\eta_G^2\) = 0.001, \emph{Figure \ref{fig:kor-2}}) was significant.
 
 \hypertarget{discussion-1}{%
 \subsection{3.3. Discussion}\label{discussion-1}}
