correction from feedback
Signed-off-by: Atsuko Tominaga <Tominaga_Atsuko@phd.ceu.edu>

--- a/paper/manuscript.tex
+++ b/paper/manuscript.tex
@@ -366,7 +366,7 @@ A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~perfo
 \hypertarget{discussion-1}{%
 \subsection{3.3. Discussion}\label{discussion-1}}
 
-The results from Experiment 2 replicated our earlier findings and provide further evidence that skilled pianists were able to modulate their performance for teaching purposes. As in Experiment 1, we observed slower performance only while teaching the notated articulation. Again, KOR showed that when teaching articulation, participants produced shorter staccato, while there was no significant difference in legato between the two conditions as Experiment 1. While teaching dynamics, KV showed that participants produced louder forte and softer piano. This pattern of exaggeration was more pronounced than in Experiment 1, where only louder forte was observed. Furthermore, we again found that when teaching dynamics, participants made a larger contrast between forte and piano bidirectionally at transition points. Importantly, participants did not modulate performance aspects that were irrelevant with regard to the techniques to be taught (i.e., no modulation of dynamics when teaching articulation and vice versa). Overall, Experiment 2 demonstrated systematic and fine-grained didactic performance modulations for a naturalistic piece of music.
+The results from Experiment 2 replicate our earlier findings and provide further evidence that skilled pianists were able to modulate their performance for teaching purposes. As in Experiment 1, we observed slower performance only while teaching the notated articulation. Again, KOR showed that when teaching articulation, participants produced shorter staccato, while there was no significant difference in legato between the two conditions as Experiment 1. While teaching dynamics, KV showed that participants produced louder forte and softer piano. This pattern of exaggeration was more pronounced than in Experiment 1, where only louder forte was observed. Furthermore, we again found that when teaching dynamics, participants made a larger contrast between forte and piano bidirectionally at transition points. Importantly, participants did not modulate performance aspects that were irrelevant with regard to the techniques to be taught (i.e., no modulation of dynamics when teaching articulation and vice versa). Overall, Experiment 2 demonstrated systematic and fine-grained didactic performance modulations for a naturalistic piece of music.
 
 \begin{figure}
 \includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-ioi-2-1} \caption{\label{fig:ioi-2}Experiment 2: Normalised IOIs when playing the piece with either articulation (left) or dynamics (right). Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box. Significance levels: * \textit{p} < .05, ** \textit{p} < .01, *** \textit{p} < .001}\label{fig:plot-ioi-2}
@@ -391,7 +391,7 @@ The results from Experiment 2 replicated our earlier findings and provide furthe
 
 The aim of the study was to investigate how expert pianists modulate their performance in order to teach expressive techniques. Overall, the findings of the two experiments showed that pianists performed one and the same piece differently depending on whether they played with the intention to teach expressive techniques or with the intention to perform the piece for an audience. When playing with the intention to teach, pianists selectively highlighted relevant aspects of artistic expressions. Across two different pieces, they exaggerated staccato when playing with the intention to teach expressions concerning articulation. The lack of a difference for legato when teaching articulation might stem from a ceiling effect. When playing with the intention to teach expressions concerning dynamics, participants exaggerated changes between forte and piano (in both directions). This constitutes an effective way to highlight the technique as loudness is determined relatively. Taken together, our findings demonstrate that expert pianists systematically modulated their sound depending on the specific technique they were trying to convey.
 
-Although participants tended to play slower in the teaching condition than in the performing condition in general, we found a significant difference only for articulation, not for dynamics. As we mentioned in the discussion of Experiment 1, it could be that the metronome beats given prior to each performance discouraged participants from deviating from the prescribed tempo. Another possibility is that expression is actually best taught when leaving the tempo unchanged when it is irrelevant. This would imply that general didactic modulations like slowing down might be less useful in the context of teaching expressive artistic techniques where timing itself can be used to add an expression to a performance.
+Although participants tended to play slower in the teaching condition than in the performing condition in general, we found a significant difference only for articulation, not for dynamics. As mentioned in the discussion of Experiment 1, it could be that the metronome beats given prior to each performance discouraged participants from deviating from the prescribed tempo. Another possibility is that expression is actually best taught when leaving the tempo unchanged when it is irrelevant. This would imply that general didactic modulations like slowing down might be less useful in the context of teaching expressive techniques where timing itself can be used to add an expression to a performance.
 
 Musicians and music teachers tend to consider expressive skills as a performer's most important skill (Lindström, Juslin, Bresin, \& Williamon, 2003). In the present study, experts focused on the teaching of expressions that were notated. However, expression also has other facets (Juslin, 2003) that are not only piece-related but performer- or context-related. An interesting topic for future research is how experts teach not only expressive techniques as such but convey possibilities of interpretation.
 
